# game_of_life

./: CMakeLists.txt  README.md  main.cpp
runnable/: initial3.txt
